ansible/assets/manifests/ccnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-egress
spec:
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  egress:
    - toEndpoints:
        - {}

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-dns
spec:
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchExpressions:
      - key: "k8s-app"
        operator: "NotIn"
        values:
          - kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
